# simple_propa

./: LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
licenses/: LICENSE.rst
simple_propa/: __init__.py
