[metadata]
name = simple_propa
author = Régis Terrier
author_email = rterrier.github@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = 
description = Implements simple Cosmic-ray propagation solutions.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy
    scipy
    astropy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main


[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "simple_propa" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  simple_propa/__init*
  simple_propa/conftest.py
  simple_propa/*setup_package*
  simple_propa/tests/*
  simple_propa/*/tests/*
  simple_propa/extern/*
  simple_propa/version*
  */simple_propa/__init*
  */simple_propa/conftest.py
  */simple_propa/*setup_package*
  */simple_propa/tests/*
  */simple_propa/*/tests/*
  */simple_propa/extern/*
  */simple_propa/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
